compiler-core/src/go/tests/snapshots/gleam_core__go__tests__blocks__block_in_tail_position_shadowing_variables.snap
---
source: compiler-core/src/go/tests/blocks.rs
expression: "\nfn b() {\n  let x = 1\n  {\n    let x = 2\n    x + 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn b() {
  let x = 1
  {
    let x = 2
    x + 1
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func b() gleam_P.Int_t {
  var x gleam_P.Int_t = 1
  _ = x
  var xʹ1 gleam_P.Int_t = 2
  _ = xʹ1
  return xʹ1 + 1
}
