compiler-core/src/go/tests/snapshots/gleam_core__go__tests__blocks__left_operator_sequence.snap
---
source: compiler-core/src/go/tests/blocks.rs
expression: "\nfn go() {\n  1 == {\n    1\n    2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  1 == {
    1
    2
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Bool_t {
  return gleam_P.Bool_t(1.Equal((func() gleam_P.Int_t {
    _ = 1
    return 2
  })()))
}
